# TicTacToe

./: .clang-format  CMakeLists.txt  LICENSE  build.sh
src/: appdata.cpp  common.cpp  game.cpp  grid.cpp  main.cpp  platform.cpp  sdl_data.cpp  vec.cpp
src/headers/: appdata.hpp  common.hpp  debug.hpp  game.hpp  grid.hpp  platform.hpp  player.hpp  rgba.hpp  sdl_data.hpp  vec.hpp
src/include/: game.hpp  grid.hpp  player.hpp  rgba.hpp  sdl_data.hpp
utils/: format.sh
